crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_html_block_paragraph_then_script_close_commonmark.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..14
  PARAGRAPH@0..14
    TEXT@0..3 "foo"
    NEWLINE@3..4 "\n"
    INLINE_HTML@4..13
      INLINE_HTML_CONTENT@4..13 "</script>"
    NEWLINE@13..14 "\n"
