crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_html_block_paragraph_then_style_pandoc.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
assertion_line: 97
expression: cst_output
---
DOCUMENT@0..21
  PARAGRAPH@0..21
    TEXT@0..3 "foo"
    NEWLINE@3..4 "\n"
    INLINE_HTML@4..11
      INLINE_HTML_CONTENT@4..11 "<style>"
    TEXT@11..12 "x"
    INLINE_HTML@12..20
      INLINE_HTML_CONTENT@12..20 "</style>"
    NEWLINE@20..21 "\n"
